v19.0/interfaces/GC.Spread.Sheets.IWorkBookDefaultOptions.md
# Interface: IWorkBookDefaultOptions

[Spread](../modules/GC.Spread.md).[Sheets](../modules/GC.Spread.Sheets.md).IWorkBookDefaultOptions

## Table of contents

### Properties

- [allSheetsListVisible](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allsheetslistvisible)
- [allowAutoCreateHyperlink](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowautocreatehyperlink)
- [allowAutoExtendFilterRange](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowautoextendfilterrange)
- [allowContextMenu](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowcontextmenu)
- [allowCopyPasteExcelStyle](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowcopypasteexcelstyle)
- [allowDragHeaderToMove](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowdragheadertomove)
- [allowDynamicArray](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowdynamicarray)
- [allowExtendPasteRange](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowextendpasterange)
- [allowInvalidFormula](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowinvalidformula)
- [allowSheetReorder](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowsheetreorder)
- [allowUndo](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowundo)
- [allowUserDeselect](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserdeselect)
- [allowUserDragDrop](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserdragdrop)
- [allowUserDragFill](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserdragfill)
- [allowUserDragMerge](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserdragmerge)
- [allowUserEditFormula](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowusereditformula)
- [allowUserResize](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserresize)
- [allowUserZoom](GC.Spread.Sheets.IWorkBookDefaultOptions.md#allowuserzoom)
- [autoFitType](GC.Spread.Sheets.IWorkBookDefaultOptions.md#autofittype)
- [backColor](GC.Spread.Sheets.IWorkBookDefaultOptions.md#backcolor)
- [backgroundImage](GC.Spread.Sheets.IWorkBookDefaultOptions.md#backgroundimage)
- [backgroundImageLayout](GC.Spread.Sheets.IWorkBookDefaultOptions.md#backgroundimagelayout)
- [builtInFileIcons](GC.Spread.Sheets.IWorkBookDefaultOptions.md#builtinfileicons)
- [calcOnDemand](GC.Spread.Sheets.IWorkBookDefaultOptions.md#calcondemand)
- [calculationMode](GC.Spread.Sheets.IWorkBookDefaultOptions.md#calculationmode)
- [columnResizeMode](GC.Spread.Sheets.IWorkBookDefaultOptions.md#columnresizemode)
- [copyPasteHeaderOptions](GC.Spread.Sheets.IWorkBookDefaultOptions.md#copypasteheaderoptions)
- [customList](GC.Spread.Sheets.IWorkBookDefaultOptions.md#customlist)
- [cutCopyIndicatorBorderColor](GC.Spread.Sheets.IWorkBookDefaultOptions.md#cutcopyindicatorbordercolor)
- [cutCopyIndicatorVisible](GC.Spread.Sheets.IWorkBookDefaultOptions.md#cutcopyindicatorvisible)
- [defaultDragFillType](GC.Spread.Sheets.IWorkBookDefaultOptions.md#defaultdragfilltype)
- [defaultSheetTabStyles](GC.Spread.Sheets.IWorkBookDefaultOptions.md#defaultsheettabstyles)
- [enableAccessibility](GC.Spread.Sheets.IWorkBookDefaultOptions.md#enableaccessibility)
- [enableFormulaTextbox](GC.Spread.Sheets.IWorkBookDefaultOptions.md#enableformulatextbox)
- [font](GC.Spread.Sheets.IWorkBookDefaultOptions.md#font)
- [formulaFormatHint](GC.Spread.Sheets.IWorkBookDefaultOptions.md#formulaformathint)
- [grayAreaBackColor](GC.Spread.Sheets.IWorkBookDefaultOptions.md#grayareabackcolor)
- [hideSelection](GC.Spread.Sheets.IWorkBookDefaultOptions.md#hideselection)
- [highlightInvalidData](GC.Spread.Sheets.IWorkBookDefaultOptions.md#highlightinvaliddata)
- [incrementalCalculation](GC.Spread.Sheets.IWorkBookDefaultOptions.md#incrementalcalculation)
- [iterativeCalculation](GC.Spread.Sheets.IWorkBookDefaultOptions.md#iterativecalculation)
- [iterativeCalculationMaximumChange](GC.Spread.Sheets.IWorkBookDefaultOptions.md#iterativecalculationmaximumchange)
- [iterativeCalculationMaximumIterations](GC.Spread.Sheets.IWorkBookDefaultOptions.md#iterativecalculationmaximumiterations)
- [newTabVisible](GC.Spread.Sheets.IWorkBookDefaultOptions.md#newtabvisible)
- [pasteSkipInvisibleRange](GC.Spread.Sheets.IWorkBookDefaultOptions.md#pasteskipinvisiblerange)
- [pivotAreaReference](GC.Spread.Sheets.IWorkBookDefaultOptions.md#pivotareareference)
- [referenceStyle](GC.Spread.Sheets.IWorkBookDefaultOptions.md#referencestyle)
- [resizeZeroIndicator](GC.Spread.Sheets.IWorkBookDefaultOptions.md#resizezeroindicator)
- [rowResizeMode](GC.Spread.Sheets.IWorkBookDefaultOptions.md#rowresizemode)
- [scrollByPixel](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollbypixel)
- [scrollIgnoreHidden](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollignorehidden)
- [scrollPixel](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollpixel)
- [scrollbarAppearance](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollbarappearance)
- [scrollbarMaxAlign](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollbarmaxalign)
- [scrollbarShowMax](GC.Spread.Sheets.IWorkBookDefaultOptions.md#scrollbarshowmax)
- [sheetCount](GC.Spread.Sheets.IWorkBookDefaultOptions.md#sheetcount)
- [showDragDropTip](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showdragdroptip)
- [showDragFillSmartTag](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showdragfillsmarttag)
- [showDragFillTip](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showdragfilltip)
- [showHorizontalScrollbar](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showhorizontalscrollbar)
- [showResizeTip](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showresizetip)
- [showScrollTip](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showscrolltip)
- [showVerticalScrollbar](GC.Spread.Sheets.IWorkBookDefaultOptions.md#showverticalscrollbar)
- [tabEditable](GC.Spread.Sheets.IWorkBookDefaultOptions.md#tabeditable)
- [tabNavigationVisible](GC.Spread.Sheets.IWorkBookDefaultOptions.md#tabnavigationvisible)
- [tabStripRatio](GC.Spread.Sheets.IWorkBookDefaultOptions.md#tabstripratio)
- [tabStripVisible](GC.Spread.Sheets.IWorkBookDefaultOptions.md#tabstripvisible)
- [useTouchLayout](GC.Spread.Sheets.IWorkBookDefaultOptions.md#usetouchlayout)

## Properties

### <a id="allsheetslistvisible" name="allsheetslistvisible"></a> allSheetsListVisible

• `Optional` **allSheetsListVisible**: [`AllSheetsListVisibility`](../enums/GC.Spread.Sheets.AllSheetsListVisibility.md)

电子表格是否显示特殊标签，以允许用户打开对话框来显示所有工作表。默认值为GC.Spread.Sheets.AllSheetsListVisibility.auto。

___

### <a id="allowautocreatehyperlink" name="allowautocreatehyperlink"></a> allowAutoCreateHyperlink

• `Optional` **allowAutoCreateHyperlink**: `boolean`

是否在电子表格中启用超链接自动创建功能。默认值为 true.

___

### <a id="allowautoextendfilterrange" name="allowautoextendfilterrange"></a> allowAutoExtendFilterRange

• `Optional` **allowAutoExtendFilterRange**: `boolean`

是否允许像 Excel 一样自动扩展筛选区域。默认值为 false.

___

### <a id="allowcontextmenu" name="allowcontextmenu"></a> allowContextMenu

• `Optional` **allowContextMenu**: `boolean`

是否允许用户打开内置上下文菜单。默认值为true.

___

### <a id="allowcopypasteexcelstyle" name="allowcopypasteexcelstyle"></a> allowCopyPasteExcelStyle

• `Optional` **allowCopyPasteExcelStyle**: `boolean`

是否允许用户从本电子表格复制样式并粘贴到 Excel，或从 Excel 复制样式并粘贴到本电子表格。默认值为 true.

___

### <a id="allowdragheadertomove" name="allowdragheadertomove"></a> allowDragHeaderToMove

• `Optional` **allowDragHeaderToMove**: [`AllowDragHeaderToMove`](../enums/GC.Spread.Sheets.AllowDragHeaderToMove.md)

指定允许如何拖动标题进行移动。默认值为GC.Spread.Sheets.AllowDragHeaderToMove.none。

___

### <a id="allowdynamicarray" name="allowdynamicarray"></a> allowDynamicArray

• `Optional` **allowDynamicArray**: `boolean`

是否启用动态数组功能。默认值为 false.

___

### <a id="allowextendpasterange" name="allowextendpasterange"></a> allowExtendPasteRange

• `Optional` **allowExtendPasteRange**: `boolean`

当目标粘贴区域不足以容纳待粘贴内容时，是否自动扩展粘贴区域。默认值为 false.

___

### <a id="allowinvalidformula" name="allowinvalidformula"></a> allowInvalidFormula

• `Optional` **allowInvalidFormula**: `boolean`

是否允许输入无效的公式字符串。默认值为 false.

___

### <a id="allowsheetreorder" name="allowsheetreorder"></a> allowSheetReorder

• `Optional` **allowSheetReorder**: `boolean`

用户是否可以重新排序Spread组件中的工作表。默认值为true.

___

### <a id="allowundo" name="allowundo"></a> allowUndo

• `Optional` **allowUndo**: `boolean`

是否允许用户撤销编辑。默认值为true.

___

### <a id="allowuserdeselect" name="allowuserdeselect"></a> allowUserDeselect

• `Optional` **allowUserDeselect**: `boolean`

是否允许用户在选择中使用取消选择功能。默认值为true.

___

### <a id="allowuserdragdrop" name="allowuserdragdrop"></a> allowUserDragDrop

• `Optional` **allowUserDragDrop**: `boolean`

是否允许用户拖放范围数据。默认值为true.

___

### <a id="allowuserdragfill" name="allowuserdragfill"></a> allowUserDragFill

• `Optional` **allowUserDragFill**: `boolean`

是否允许用户拖填范围。默认值为true.

___

### <a id="allowuserdragmerge" name="allowuserdragmerge"></a> allowUserDragMerge

• `Optional` **allowUserDragMerge**: `boolean`

是否允许用户拖动合并单元格。默认值为false.

___

### <a id="allowusereditformula" name="allowusereditformula"></a> allowUserEditFormula

• `Optional` **allowUserEditFormula**: `boolean`

是否允许用户编辑电子表格中的单元格公式。默认值为 true.

___

### <a id="allowuserresize" name="allowuserresize"></a> allowUserResize

• `Optional` **allowUserResize**: `boolean`

是否允许用户调整列和行的大小。默认值为true.

___

### <a id="allowuserzoom" name="allowuserzoom"></a> allowUserZoom

• `Optional` **allowUserZoom**: `boolean`

是否允许在按住Ctrl键的同时通过滚动鼠标滚轮来缩放显示。默认值为true.

___

### <a id="autofittype" name="autofittype"></a> autoFitType

• `Optional` **autoFitType**: [`AutoFitType`](../enums/GC.Spread.Sheets.AutoFitType.md)

内容是否自动适配以容纳在仅单元格中，或同时容纳在单元格和表头中。默认值为 GC.Spread.Sheets.AutoFitType.cell。

___

### <a id="backcolor" name="backcolor"></a> backColor

• `Optional` **backColor**: `string`

用于表示Spread组件背景颜色的颜色字符串，例如“red”、“#FFFF00”、“rgb(255,0,0)”、“Accent 5”等。默认值为“white”。

___

### <a id="backgroundimage" name="backgroundimage"></a> backgroundImage

• `Optional` **backgroundImage**: ``null`` \| `string`

Spread组件的背景图片。可以是URL字符串或base64字符串。

___

### <a id="backgroundimagelayout" name="backgroundimagelayout"></a> backgroundImageLayout

• `Optional` **backgroundImageLayout**: [`ImageLayout`](../enums/GC.Spread.Sheets.ImageLayout.md)

Spread组件的背景图片布局。默认值为GC.Spread.Sheets.ImageLayout.stretch。

___

### <a id="builtinfileicons" name="builtinfileicons"></a> builtInFileIcons

• `Optional` **builtInFileIcons**: [`IBuiltInFileIcons`](GC.Spread.Sheets.IBuiltInFileIcons.md)

所有内置文件图标。

___

### <a id="calcondemand" name="calcondemand"></a> calcOnDemand

• `Optional` **calcOnDemand**: `boolean`

是否仅在按需触发时才计算公式。默认值为 false.

___

### <a id="calculationmode" name="calculationmode"></a> calculationMode

• `Optional` **calculationMode**: [`CalculationMode`](../enums/GC.Spread.Sheets.CalculationMode.md)

工作簿的公式重计算行为。默认值为 GC.Spread.Sheets.CalculationMode.auto。

___

### <a id="columnresizemode" name="columnresizemode"></a> columnResizeMode

• `Optional` **columnResizeMode**: [`ResizeMode`](../enums/GC.Spread.Sheets.ResizeMode.md)

指定列的调整大小方式。默认值为 GC.Spread.Sheets.ResizeMode.normal。

___

### <a id="copypasteheaderoptions" name="copypasteheaderoptions"></a> copyPasteHeaderOptions

• `Optional` **copyPasteHeaderOptions**: [`CopyPasteHeaderOptions`](../enums/GC.Spread.Sheets.CopyPasteHeaderOptions.md)

数据复制或粘贴时需要包含的表头类型。默认值为 GC.Spread.Sheets.CopyPasteHeaderOptions.allHeaders。

___

### <a id="customlist" name="customlist"></a> customList

• `Optional` **customList**: `string`[][]

用于用户自定义拖拽填充的列表，每次填充时会优先匹配该列表。该数组的每个项均为字符串数组类型。示例：[["Custom1", "C1"], ["Custom2", "C2", "C3"]]。当用户拖拽填充「Custom1」时，填充结果为「C1」；当用户拖拽填充「Custom2」时，填充结果依次为「C2」、「C3」。

___

### <a id="cutcopyindicatorbordercolor" name="cutcopyindicatorbordercolor"></a> cutCopyIndicatorBorderColor

• `Optional` **cutCopyIndicatorBorderColor**: `string`

当用户剪切或复制所选内容时显示的指示器的边框颜色。默认值为“#217346”。

___

### <a id="cutcopyindicatorvisible" name="cutcopyindicatorvisible"></a> cutCopyIndicatorVisible

• `Optional` **cutCopyIndicatorVisible**: `boolean`

复制或剪切所选项目时是否显示指示器。默认值为true.

___

### <a id="defaultdragfilltype" name="defaultdragfilltype"></a> defaultDragFillType

• `Optional` **defaultDragFillType**: [`AutoFillType`](../enums/GC.Spread.Sheets.Fill.AutoFillType.md)

默认填充类型。默认值为GC.Spread.Sheets.Fill.AutoFillType.auto。

___

### <a id="defaultsheettabstyles" name="defaultsheettabstyles"></a> defaultSheetTabStyles

• `Optional` **defaultSheetTabStyles**: [`SheetTabStyles`](../modules/GC.Spread.Sheets.md#sheettabstyles)

工作表标签的所有默认状态样式。

___

### <a id="enableaccessibility" name="enableaccessibility"></a> enableAccessibility

• `Optional` **enableAccessibility**: `boolean`

是否在电子表格中启用辅助功能支持。默认值为 false.

___

### <a id="enableformulatextbox" name="enableformulatextbox"></a> enableFormulaTextbox

• `Optional` **enableFormulaTextbox**: `boolean`

是否启用电子表格中的公式输入框。默认值为 true.

___

### <a id="font" name="font"></a> font

• `Optional` **font**: `string`

标签栏字体。

___

### <a id="formulaformathint" name="formulaformathint"></a> formulaFormatHint

• `Optional` **formulaFormatHint**: `boolean`

输入公式时是否自动生成对应的格式。默认值为 true.

___

### <a id="grayareabackcolor" name="grayareabackcolor"></a> grayAreaBackColor

• `Optional` **grayAreaBackColor**: ``null`` \| `string`

用于表示灰色区域背景色的颜色字符串，例如“red”、“#FFFF00”、“rgb(255,0,0)”、“Accent 5”等。默认值为null，意味着使用主题默认颜色。

___

### <a id="hideselection" name="hideselection"></a> hideSelection

• `Optional` **hideSelection**: `boolean`

当 Spread 组件没有焦点时，是否显示选择突出显示。默认值为 false.

___

### <a id="highlightinvaliddata" name="highlightinvaliddata"></a> highlightInvalidData

• `Optional` **highlightInvalidData**: `boolean`

是否突出显示无效数据。默认值为 false.

___

### <a id="incrementalcalculation" name="incrementalcalculation"></a> incrementalCalculation

• `Optional` **incrementalCalculation**: `boolean`

是否以增量方式计算公式且不阻塞用户界面（UI）。默认值为 false.

___

### <a id="iterativecalculation" name="iterativecalculation"></a> iterativeCalculation

• `Optional` **iterativeCalculation**: `boolean`

是否启用迭代计算功能。默认值为 true.

___

### <a id="iterativecalculationmaximumchange" name="iterativecalculationmaximumchange"></a> iterativeCalculationMaximumChange

• `Optional` **iterativeCalculationMaximumChange**: `number`

迭代计算时的最大误差变化量。默认值为 0.01。

___

### <a id="iterativecalculationmaximumiterations" name="iterativecalculationmaximumiterations"></a> iterativeCalculationMaximumIterations

• `Optional` **iterativeCalculationMaximumIterations**: `number`

迭代计算时的最大迭代次数。默认值为 1000。

___

### <a id="newtabvisible" name="newtabvisible"></a> newTabVisible

• `Optional` **newTabVisible**: `boolean`

电子表格是否显示用于让用户插入新工作表的特殊标签。默认值为true.

___

### <a id="pasteskipinvisiblerange" name="pasteskipinvisiblerange"></a> pasteSkipInvisibleRange

• `Optional` **pasteSkipInvisibleRange**: `boolean`

粘贴内容时是否跳过不可见区域。默认值为 false.

___

### <a id="pivotareareference" name="pivotareareference"></a> pivotAreaReference

• `Optional` **pivotAreaReference**: [`PivotAreaReference`](../enums/GC.Spread.Pivot.PivotAreaReference.md)

选择数据透视表数据区域时，是否自动生成 getPivotData 公式或直接生成单元格引用。默认值为 GC.Spread.Pivot.PivotAreaReference.getPivotData。

___

### <a id="referencestyle" name="referencestyle"></a> referenceStyle

• `Optional` **referenceStyle**: [`ReferenceStyle`](../enums/GC.Spread.Sheets.ReferenceStyle.md)

工作簿中单元格公式里的单元格和单元格区域引用格式。默认值为 GC.Spread.Sheets.ReferenceStyle.a1。

___

### <a id="resizezeroindicator" name="resizezeroindicator"></a> resizeZeroIndicator

• `Optional` **resizeZeroIndicator**: [`ResizeZeroIndicator`](../enums/GC.Spread.Sheets.ResizeZeroIndicator.md)

行或列调整为零宽度/高度（隐藏）时的绘制策略。默认值为 GC.Spread.Sheets.ResizeZeroIndicator.enhanced。

___

### <a id="rowresizemode" name="rowresizemode"></a> rowResizeMode

• `Optional` **rowResizeMode**: [`ResizeMode`](../enums/GC.Spread.Sheets.ResizeMode.md)

指定行的调整大小方式。默认值为 GC.Spread.Sheets.ResizeMode.normal。

___

### <a id="scrollbypixel" name="scrollbypixel"></a> scrollByPixel

• `Optional` **scrollByPixel**: `boolean`

是否启用像素级精准滚动功能。默认值为 false.

___

### <a id="scrollignorehidden" name="scrollignorehidden"></a> scrollIgnoreHidden

• `Optional` **scrollIgnoreHidden**: `boolean`

滚动条是否忽略隐藏的行或列。默认值为 false.

___

### <a id="scrollpixel" name="scrollpixel"></a> scrollPixel

• `Optional` **scrollPixel**: `number`

当 scrollByPixel 为 true 时，指定每次滚动的像素数。最终滚动像素数为「滚动增量 × 该配置值」的结果。例如：滚动增量为 3，该配置值为 5，则最终滚动 15 个像素。默认值为 5。

___

### <a id="scrollbarappearance" name="scrollbarappearance"></a> scrollbarAppearance

• `Optional` **scrollbarAppearance**: [`ScrollbarAppearance`](../enums/GC.Spread.Sheets.ScrollbarAppearance.md)

滚动条的外观样式，包含「skin」和「mobile」两个枚举选项。默认值为 GC.Spread.Sheets.ScrollbarAppearance.skin。

___

### <a id="scrollbarmaxalign" name="scrollbarmaxalign"></a> scrollbarMaxAlign

• `Optional` **scrollbarMaxAlign**: `boolean`

滚动条是否与活动工作表的最后一行和最后一列对齐。默认值为 false.

___

### <a id="scrollbarshowmax" name="scrollbarshowmax"></a> scrollbarShowMax

• `Optional` **scrollbarShowMax**: `boolean`

显示的滚动条是否基于工作表中的全部列数和行数。默认值为true.

___

### <a id="sheetcount" name="sheetcount"></a> sheetCount

• `Optional` **sheetCount**: `number`

工作表的数量。默认值为1。

___

### <a id="showdragdroptip" name="showdragdroptip"></a> showDragDropTip

• `Optional` **showDragDropTip**: `boolean`

是否显示拖放提示。默认值为 true.

___

### <a id="showdragfillsmarttag" name="showdragfillsmarttag"></a> showDragFillSmartTag

• `Optional` **showDragFillSmartTag**: `boolean`

是否显示拖放填充对话框。默认值为true.

___

### <a id="showdragfilltip" name="showdragfilltip"></a> showDragFillTip

• `Optional` **showDragFillTip**: `boolean`

是否显示拖填提示。默认值为 true.

___

### <a id="showhorizontalscrollbar" name="showhorizontalscrollbar"></a> showHorizontalScrollbar

• `Optional` **showHorizontalScrollbar**: `boolean`

是否显示水平滚动条。默认值为true.

___

### <a id="showresizetip" name="showresizetip"></a> showResizeTip

• `Optional` **showResizeTip**: [`ShowResizeTip`](../enums/GC.Spread.Sheets.ShowResizeTip.md)

如何显示调整大小提示。默认值为GC.Spread.Sheets.ShowResizeTip.none。

___

### <a id="showscrolltip" name="showscrolltip"></a> showScrollTip

• `Optional` **showScrollTip**: [`ShowScrollTip`](../enums/GC.Spread.Sheets.ShowScrollTip.md)

如何显示滚动提示。默认值为 GC.Spread.Sheets.ShowScrollTip.none。

___

### <a id="showverticalscrollbar" name="showverticalscrollbar"></a> showVerticalScrollbar

• `Optional` **showVerticalScrollbar**: `boolean`

是否显示垂直滚动条。默认值为true.

___

### <a id="tabeditable" name="tabeditable"></a> tabEditable

• `Optional` **tabEditable**: `boolean`

是否允许用户编辑工作表标签栏。默认值为 true.

___

### <a id="tabnavigationvisible" name="tabnavigationvisible"></a> tabNavigationVisible

• `Optional` **tabNavigationVisible**: `boolean`

是否显示工作表标签导航。默认值为true.

___

### <a id="tabstripratio" name="tabstripratio"></a> tabStripRatio

• `Optional` **tabStripRatio**: `number`

标签栏的宽度占整个水平滚动条宽度的百分比。默认值为 0.5。

___

### <a id="tabstripvisible" name="tabstripvisible"></a> tabStripVisible

• `Optional` **tabStripVisible**: `boolean`

是否显示工作表标签栏。默认值为 true.

___

### <a id="usetouchlayout" name="usetouchlayout"></a> useTouchLayout

• `Optional` **useTouchLayout**: `boolean`

是否使用触摸布局来呈现 Spread 组件。默认值为 false.
